<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>
    <string name="app_fullname">Alexandria Book Manager</string>
    <string name="app_info">Udacity Android Nanodegree program</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">Enter ISBN-10 or ISBN-13. Digits only.</string>
    <string name="search_hint">Search for a book by name.</string>
    <string name="navigation_icon">Menu Icon</string>
    <string name="navigation_item">Menu Item</string>
    <string name="searching">Searching..</string>
    <string name="not_found">No Book Found</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="good_button">Good</string>
    <string name="trash_button">Trash</string>
    <string name="delete">Delete Book</string>
    <string name="startscreen_settings">Select the Startscreen</string>
    <string name="title_activity_zbar_scanner">ISBN ZBar Scanner</string>
    <string name="title_activity_zxing_scanner">ISBN ZXing Scanner</string>
    <string name="action_share">Share</string>
    <string name="back_button">Go Back</string>
    <string name="share_text">A must read book: </string>

    <!-- Content Descriptions -->
    <string name="book_cover">Book cover</string>
    <string name="book_title">Book title</string>
    <string name="book_sub_title">Book sub-title</string>
    <string name="book_about">About this book</string>
    <string name="book_ean">Book ISBN number</string>
    <string name="book_authors">Book authors</string>
    <string name="book_categories">Book categories</string>
    <string name="book_description">Book description</string>
    <string name="book_list">Book list</string>
    <string name="book_info1">Book info</string>
    <string name="book_info2">Book additional info</string>
    <string name="book_toolbar">The toolbar</string>
    <string name="book_icon">Alexandria app icon</string>
    <string name="book_scan">Scan the ISBN number</string>

    <!-- Scanner Items -->
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>

    <!-- Menu Items -->
    <string name="scan">Scan/Add a Book</string>
    <string name="books">List of Books</string>
    <string name="about">About this App</string>

    <!-- Misc -->
    <string name="misc_isbn_prefix">978</string>
    <string name="misc_front_facing">Front Facing</string>
    <string name="misc_rear_facing">Rear Facing</string>
    <string name="misc_camera_id">Camera ID: </string>
    <string name="misc_book_detail">Book Detail</string>
    <string name="misc_scan_results">Scan Results</string>
    <string name="misc_ok">OK</string>

    <string-array name="navDrawerItems">
        <item>@string/scan</item>
        <item>@string/books</item>
        <item>@string/about</item>
    </string-array>

    <string-array name="navDrawerIcons">
        <item>@drawable/add_a_book</item>
        <item>@drawable/list_books</item>
        <item>@drawable/about</item>
    </string-array>

    <string-array name="pref_start_options">
        <item>@string/scan</item>
        <item>@string/books</item>
    </string-array>

    <string name="about_text">
        This application gets book information from a Google API. All titles, cover images, and author information come from there.
        The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program.
        This version of Alexandria was modified by Lee Hounshell to include ISBN Scanning Ability (ZXing and ZBar), Image and Html Caching, RecyclerView, Material Design,
        Localization, Accessibility, AppCompat Integration, Navigation Drawer, Styling, Layout Mirroring, Toolbar, Lint-Free code, Deprecation-Fixes and Bug-Fixes.
    </string>

</resources>
