<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_header_height"
    style="@style/header_style"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        style="@style/header_layout_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/header_info1_style"
            android:contentDescription="@string/book_info1"
            android:text="@string/app_fullname" />

        <TextView
            android:id="@+id/header_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/header_info2_style"
            android:contentDescription="@string/book_info2"
            android:text="@string/app_info" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleView"
        android:layout_width="@dimen/circle_view_width_and_height"
        android:layout_height="@dimen/circle_view_width_and_height"
        style="@style/header_circleview_style"
        android:contentDescription="@string/book_icon"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>

