<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBook">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fullBookTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/fullbook_title_style"
                android:contentDescription="@string/book_title" />

            <ImageView
                android:id="@+id/fullBookCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fullbook_cover_style"
                android:layout_alignLeft="@+id/fullBookTitle"
                android:layout_alignStart="@+id/fullBookTitle"
                android:layout_below="@+id/fullBookTitle"
                android:contentDescription="@string/book_cover" />

            <TextView
                android:id="@+id/fullBookSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fullbook_sub_title_style"
                android:layout_alignTop="@+id/fullBookCover"
                android:layout_toEndOf="@+id/fullBookCover"
                android:layout_toRightOf="@+id/fullBookCover"
                android:contentDescription="@string/book_sub_title" />

            <TextView
                android:id="@+id/fullBookDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/fullbook_desc_style"
                android:layout_below="@+id/fullBookCover"
                android:contentDescription="@string/book_description" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/fullbook_author_category_style"
                android:layout_below="@+id/fullBookDesc"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/book_categories"
                    android:gravity="start|top" />

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/book_authors"
                    android:gravity="end|top"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/book_margin"
            android:layout_marginEnd="@dimen/book_margin"
            android:layout_marginRight="@dimen/book_margin"
            android:contentDescription="@string/delete"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawableStart="@drawable/ic_action_discard"
            android:text="@string/delete"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>
